# raytracer

./: .gitignore  README.md  config.json  configA.json  configB.json  image.ppm  meson.build  premade.json
cpp/: meson.build
cpp/csrc/: camera.cpp  camera.h  factory.cpp  factory.h  float3.cpp  float3.h  hitrecord.h  interval.h  io.h  main.cpp  materials.cpp  materials.h  random.h  ray.h  scene.cpp  scene.h
raytracer/: camera.cpp  camera.h  factory.h  hitrecord.h  interval.h  main.cpp  materials.cpp  materials.h  random.cpp  ray.h  scene.cpp  scene.h  utils.h  vec3.cpp  vec3.h
